[package]
name = "trello-pinterest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
tower = {version = "0.4"}
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
toml = { version = "0.8" }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"